exports[`test should render a default table 1`] = `
<table
  className="terra-Table terra-Table--striped">
  <TableHeader>
    <TableHeaderContent
      content="Column Heading"
      minWidth="small" />
    <TableHeaderContent
      content="Column Heading"
      minWidth="small" />
    <TableHeaderContent
      content="Column Heading"
      minWidth="small" />
  </TableHeader>
  <TableRows>
    <TableRow
      isSelected={false}>
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
    </TableRow>
    <TableRow
      isSelected={false}>
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
    </TableRow>
  </TableRows>
</table>
`;

exports[`test should render a table without zebra stripes 1`] = `
<table
  className="terra-Table">
  <TableHeader>
    <TableHeaderContent
      content="Column Heading"
      minWidth="small" />
    <TableHeaderContent
      content="Column Heading"
      minWidth="small" />
    <TableHeaderContent
      content="Column Heading"
      minWidth="small" />
  </TableHeader>
  <TableRows>
    <TableRow
      isSelected={false}>
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
    </TableRow>
    <TableRow
      isSelected={false}>
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
      <TableRowContent
        content="Table Data" />
    </TableRow>
  </TableRows>
</table>
`;
